# DirectXTex-sys

./: Cargo.toml  build.rs
src/: bindings.rs  lib.rs
