[package]
name = "DirectXTex-sys"
version = "0.1.0"
authors = ["Will Hakes <info@cwilliamhakes.com>"]
edition = "2018"

[dependencies]
winapi = { version = "0.3.8", features = [
    "d3d11",
    "d3dcommon",
    "d3dcompiler",
    "impl-default",
    "std",
    "sysinfoapi",
    "winerror",
    "winuser"
] }

[build-dependencies]
bindgen = "0.53.2"
